Done with my assignment

--- a/week05/week05_assignment_2.ipynb
+++ b/week05/week05_assignment_2.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 108,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -83,14 +83,12 @@
         "    0\n",
         "    >>> longest(['when', 'what', 'where', 'how', 'who'])\n",
         "    2\n",
-        "    >>> longest(['short', 'tiny', 'lengthy', 'biggest'])\n",
-        "    2\n",
-        "    \"\"\"\n",
-        "    if not L:  # Check if the list is empty\n",
-        "        return -1  # Return -1 for an empty list\n",
         "\n",
-        "    longest_index = 0  # Start with the first string\n",
-        "    max_length = len(L[0])  # Length of the first string\n",
+        "    \"\"\"\n",
+        "    if not L:\n",
+        "        return -1\n",
+        "    longest_index = 0\n",
+        "    max_length = len(L[0])\n",
         "\n",
         "    for index in range(1, len(L)):\n",
         "        if len(L[index]) > max_length:\n",
@@ -103,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 109,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -124,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EcdUSaNOKofF",
-        "outputId": "0f25da68-155d-4a63-c578-e29d3b67b264"
+        "outputId": "b1441f84-47eb-4b9e-c408-bdba10fdb1f4"
       },
       "outputs": [
         {
@@ -150,11 +148,6 @@
             "ok\n",
             "Trying:\n",
             "    longest(['when', 'what', 'where', 'how', 'who'])\n",
-            "Expecting:\n",
-            "    2\n",
-            "ok\n",
-            "Trying:\n",
-            "    longest(['short', 'tiny', 'lengthy', 'biggest'])\n",
             "Expecting:\n",
             "    2\n",
             "ok\n"
@@ -183,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 111,
       "metadata": {
         "id": "ZUhB46AxKofG"
       },
@@ -217,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 112,
       "metadata": {
         "id": "z_EaCO-VKofG"
       },
@@ -230,13 +223,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "irOQePsEKofG",
-        "outputId": "394b3344-375c-4f62-9a88-d0a57b9ff70b"
+        "outputId": "c49e5869-47ea-4441-ab67-50caf8506fff"
       },
       "outputs": [
         {
