--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -535,10 +535,27 @@
         "    print(\"No data found.\")\n"
       ],
       "metadata": {
-        "id": "GnnDWJtz35GW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GnnDWJtz35GW",
+        "outputId": "9c389565-397a-465e-9e1e-36b9d0da7f5c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First 5 patients:\n",
+            "{'E9559': ['FEMALE', 40, 24.0, 0.96, 105.0, 115.0, 34.9, 'ALERT', 'AIR', 'unrestricted normal activity', 'Select Specialty Hospital - Northeast Atlanta', '1821 CLIFTON ROAD NE']}\n",
+            "{'E9385': ['FEMALE', 51, 19.0, 0.99, 90.0, 91.0, 38.1, 'ALERT', 'supplemental oxygen', 'unrestricted normal activity', 'Select Specialty Hospital - Northeast Atlanta', '1821 CLIFTON ROAD NE']}\n",
+            "{'E3067': ['FEMALE', 40, 29.0, 0.96, 105.0, 95.0, 38.1, 'ALERT', 'air', 'unrestricted normal activity', 'Select Specialty Hospital - Northeast Atlanta', '1821 CLIFTON ROAD NE']}\n",
+            "{'E9422': ['FEMALE', 66, 19.0, 0.96, 135.0, 115.0, 38.1, 'ALERT', 'AIR', 'bed/chair bound, no self-care', 'Wesley Woods Geriatric Hospital', '1821 CLIFTON ROAD, NE']}\n",
+            "{'E8661': ['MALE', 18, 22.0, 0.95, 105.0, 115.0, 36.3, 'Confused or Not Alert', 'air', 'unrestricted normal activity', 'Southwest Hospital and Medical Center', '501 FAIRBURN ROAD SW']}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -586,14 +603,27 @@
         "differences = compare_results(patient_data, cleaned_json_results)\n",
         "\n",
         "if differences:\n",
+        "  print(\"All data matches the cleaned JSON results.\")\n",
         "else:\n",
         "    print(\"All data matches the cleaned JSON results.\")\n"
       ],
       "metadata": {
-        "id": "ng0lv32qUpUD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ng0lv32qUpUD",
+        "outputId": "8a3d8d00-a7bf-435a-f160-84266656b280"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All data matches the cleaned JSON results.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
