--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -603,7 +603,7 @@
         "differences = compare_results(patient_data, cleaned_json_results)\n",
         "\n",
         "if differences:\n",
-        "  print(\"All data matches the cleaned JSON results.\")\n",
+        "  print(\"...\")\n",
         "else:\n",
         "    print(\"All data matches the cleaned JSON results.\")\n"
       ],
@@ -612,9 +612,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ng0lv32qUpUD",
-        "outputId": "8a3d8d00-a7bf-435a-f160-84266656b280"
+        "outputId": "934f1748-5ffd-498d-9123-aff8e3f6bff9"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
